NLA strip names can be fully rendered when they shouldn't be #97500

Closed
opened 2022-04-21 09:55:12 +02:00 by Colin Basnett · 6 comments
Member

System Information
Operating system: Windows 10
Graphics card: NVIDIA GTX 1070

Blender Version
Broken: 3.1.0
Worked: Probably never

striptextbug.gif

Depending on the strip length and the zoom level of the NLA editor, the name of the strip can intermittently become fully visible, even if it should be clipped because the strip is too short.

This is because it's hitting an edge case where the screen-space coordinates for the x component of the string rectangle are exactly the same. When this is the case, the normal font clipping is skipped due to this logic:

    if (v2s->rect.xmin >= v2s->rect.xmax) {
      BLF_draw_default((float)(v2s->mval[0] + xofs), (float)(v2s->mval[1] + yofs), 0.0, v2s->str, BLF_DRAW_STR_DUMMY_MAX);
    }
    else {
      BLF_enable(font_id, BLF_CLIPPING);
      BLF_clipping(font_id, v2s->rect.xmin - 4, v2s->rect.ymin - 4, v2s->rect.xmax + 4, v2s->rect.ymax + 4);
      BLF_draw_default(v2s->rect.xmin + xofs, v2s->rect.ymin + yofs, 0.0f, v2s->str, BLF_DRAW_STR_DUMMY_MAX);
      BLF_disable(font_id, BLF_CLIPPING);
    }

To me, it's unclear what the purpose of this fallback case is; a comment explaining why this fallback is necessary would be lovely!

Exact steps for others to reproduce the error

  1. Make a bunch of strips with varying lengths.
  2. Zoom in and out
**System Information** Operating system: Windows 10 Graphics card: NVIDIA GTX 1070 **Blender Version** Broken: 3.1.0 Worked: Probably never ![striptextbug.gif](https://archive.blender.org/developer/F13013877/striptextbug.gif) Depending on the strip length and the zoom level of the NLA editor, the name of the strip can intermittently become fully visible, even if it should be clipped because the strip is too short. This is because it's hitting an edge case where the screen-space coordinates for the `x` component of the string rectangle are exactly the same. When this is the case, the normal font clipping is skipped due to this logic: ``` if (v2s->rect.xmin >= v2s->rect.xmax) { BLF_draw_default((float)(v2s->mval[0] + xofs), (float)(v2s->mval[1] + yofs), 0.0, v2s->str, BLF_DRAW_STR_DUMMY_MAX); } else { BLF_enable(font_id, BLF_CLIPPING); BLF_clipping(font_id, v2s->rect.xmin - 4, v2s->rect.ymin - 4, v2s->rect.xmax + 4, v2s->rect.ymax + 4); BLF_draw_default(v2s->rect.xmin + xofs, v2s->rect.ymin + yofs, 0.0f, v2s->str, BLF_DRAW_STR_DUMMY_MAX); BLF_disable(font_id, BLF_CLIPPING); } ``` To me, it's unclear what the purpose of this fallback case is; a comment explaining why this fallback is necessary would be lovely! **Exact steps for others to reproduce the error** 1. Make a bunch of strips with varying lengths. 2. Zoom in and out
Author
Member

Added subscriber: @cmbasnett

Added subscriber: @cmbasnett
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

To me, it's unclear what the purpose of this fallback case is; acomment explaining why this fallback is necessary would be lovely!

That fallback logic is from a117731aa2.
Can confirm btw.

> To me, it's unclear what the purpose of this fallback case is; acomment explaining why this fallback is necessary would be lovely! That fallback logic is from a117731aa2. Can confirm btw.

This issue was referenced by 8d53ead69b

This issue was referenced by 8d53ead69bb536acb6ce582440df2dec0b53343a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2022-05-27 11:28:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97500
No description provided.